--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
   <title>WDD 131 – Dynamic Web Fundamentals – Mary Okello</title>
   <meta name="description" content="WDD 131 – Dynamic Web Fundamentals. Mary Okello. Course introduction, student profile, and project showcase.">
   <meta name="author" content="Mary Okello">
+
+  <!-- Preload and optimize Google Font -->
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"></noscript>
+
+  <!-- Main CSS -->
   <link rel="stylesheet" href="styles/base.css" type="text/css">
+
+  <!-- JavaScript -->
   <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
   <header>
     <span id="course-title">WDD 131 – Dynamic Web Fundamentals</span>
     <nav>
-      <a href="https://www.linkedin.com/in/mary-okello-data-analyst/" target="_blank" rel="noopener">LinkedIn</a>
-      <a href="https://byupw.instructure.com/" target="_blank" rel="noopener">Canvas</a>
-      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7" target="_blank" rel="noopener">Scripture</a>
+      <a href="https://www.linkedin.com/in/mary-okello-data-analyst/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+      <a href="https://byupw.instructure.com/" target="_blank" rel="noopener noreferrer">Canvas</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7" target="_blank" rel="noopener noreferrer">Scripture</a>
       <a href="#">Final Project</a>
     </nav>
   </header>
@@ -25,13 +33,13 @@
 
     <section class="card">
       <h2>About Me</h2>
-      <img src="images/mary-profile.jpg" alt="Photo of Mary Okello" width="300">
+      <img src="images/mary-profile.jpg" alt="Photo of Mary Okello" width="300" height="400" loading="lazy">
       <p>Hello! I'm Mary, a data analyst passionate about humanitarian work and technology. I'm currently taking WDD 131 to improve my web development skills.</p>
     </section>
 
     <section class="card">
       <h2>My Interests</h2>
-      <img src="images/data-visualization.jpeg" alt="A colorful data visualization dashboard" width="300">
+      <img src="images/data-visualization.jpeg" alt="A colorful data visualization dashboard" width="300" height="200" loading="lazy">
       <p>I love working with data to tell stories that make a difference. Outside work, I enjoy reading scriptures, exploring nature, and teaching others.</p>
     </section>
   </main>
