Add index.html, base.css, getdates.js and images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="author" content="Mary Okello">
 
   <!-- Preload and optimize Google Font -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"></noscript>
 
@@ -33,13 +35,13 @@
 
     <section class="card">
       <h2>About Me</h2>
-      <img src="images/mary-profile.jpg" alt="Photo of Mary Okello" width="300" height="400" loading="lazy">
+      <img src="images/mary-profile.jpg" alt="Photo of Mary Okello" width="300" height="300">
       <p>Hello! I'm Mary, a data analyst passionate about humanitarian work and technology. I'm currently taking WDD 131 to improve my web development skills.</p>
     </section>
 
     <section class="card">
       <h2>My Interests</h2>
-      <img src="images/data-visualization.jpeg" alt="A colorful data visualization dashboard" width="300" height="200" loading="lazy">
+      <img src="images/data-visualization.jpeg" alt="A colorful data visualization dashboard" width="300" height="300">
       <p>I love working with data to tell stories that make a difference. Outside work, I enjoy reading scriptures, exploring nature, and teaching others.</p>
     </section>
   </main>
