added week two assignment

--- a/week01/index.html
+++ b/week01/index.html
@@ -6,7 +6,6 @@
   <title>WDD 131 – Dynamic Web Fundamentals – Mary Okello</title>
   <meta name="description" content="WDD 131 – Dynamic Web Fundamentals. Mary Okello. Course introduction, student profile, and project showcase.">
   <meta name="author" content="Mary Okello">
-  <link rel="stylesheet" href="styles/base.css" type="text/css">
 
   <!-- Preload and optimize Google Font -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,17 +17,12 @@
   <link rel="stylesheet" href="styles/base.css" type="text/css">
 
   <!-- JavaScript -->
-
   <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
   <header>
     <span id="course-title">WDD 131 – Dynamic Web Fundamentals</span>
     <nav>
-
-      <a href="https://www.linkedin.com/in/mary-okello-data-analyst/">LinkedIn</a>
-      <a href="https://byupw.instructure.com/">Canvas</a>
-      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a>
       <a href="https://www.linkedin.com/in/mary-okello-data-analyst/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
       <a href="https://byupw.instructure.com/" target="_blank" rel="noopener noreferrer">Canvas</a>
       <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7" target="_blank" rel="noopener noreferrer">Scripture</a>
@@ -41,40 +35,20 @@
 
     <section class="card">
       <h2>About Me</h2>
-  
-      <img src="images/mary-profile.jpg" alt="Photo of Mary Okello" width="300" height="300">
+      <img src="images\mary-profile.jpg" alt="Photo of Mary Okello" width="300" height="300">
       <p>Hello! I'm Mary, a data analyst passionate about humanitarian work and technology. I'm currently taking WDD 131 to improve my web development skills.</p>
     </section>
 
     <section class="card">
       <h2>My Interests</h2>
-
-      <img src="images/data-visualization.jpeg" alt="A colorful data visualization dashboard" width="300" height="300">
+      <img src="images/data-visualization.jpegdata-visualization.jpeg" alt="A colorful data visualization dashboard" width="300" height="300">
       <p>I love working with data to tell stories that make a difference. Outside work, I enjoy reading scriptures, exploring nature, and teaching others.</p>
     </section>
   </main>
 
-  <footer
-    <p>
-      &copy; <span id="currentyear"></span> Mary Okello, Kenya
-    </p>
-    <p id="lastModified"></p>
-  </footer>
-
-  <script>
-    // Populate the current year
-    document.getElementById("currentyear").textContent = new Date().getFullYear();
-
-    // Populate the last modified date
-    document.getElementById("lastModified").textContent = "Last Modified: " + document.lastModified;
-  </script>
-</body>
-</html>
-
-
+  <footer>
     <p>&copy; <span id="currentyear"></span> Mary Okello, Kenya</p>
     <p id="lastModified"></p>
   </footer>
 </body>
 </html>
-
