--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Temple Album</title>
-  
+
   <!-- CSS -->
   <link rel="stylesheet" href="styles/base.css" />
   <link rel="stylesheet" href="styles/larger.css" />
@@ -16,9 +16,9 @@
 
   <!-- Header -->
   <header>
-    <span class="site-title">Temple Album</span>
-    <button id="menu" aria-label="Toggle Menu">☰</button>
-    <nav class="navigation">
+    <h1 class="site-title">Temple Album</h1>
+    <button id="menu" aria-label="Toggle Navigation Menu" aria-expanded="false">☰</button>
+    <nav class="navigation" id="nav">
       <a href="#">Home</a>
       <a href="#">Old</a>
       <a href="#">New</a>
@@ -29,7 +29,7 @@
 
   <!-- Main -->
   <main>
-    <h1>Temples of The Church</h1>
+    <h2>Temples of The Church</h2>
     <div class="grid-container">
 
       <figure>
@@ -83,10 +83,10 @@
   <!-- Footer -->
   <footer>
     <p>© <span id="year"></span> 🌸 Mary Okello 🌸 Kenya</p>
-    <p>Last Modification: <span id="lastModified"></span></p>
+    <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
 
-  <!-- Year & Modified Script -->
+  <!-- Fallback JS if defer fails -->
   <script>
     document.getElementById("lastModified").textContent = document.lastModified;
     document.getElementById("year").textContent = new Date().getFullYear();
