updated temples.js and temples.html

--- a/temples.html
+++ b/temples.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="A responsive album of temples from around the world by Mary Okello. Explore photos, locations, and design.">
-  <meta name="author" content="Mary Okello">
+  <meta name="description" content="A responsive album of temples from around the world by Mary Okello. Explore photos, locations, and design." />
+  <meta name="author" content="Mary Okello" />
   <title>Temple Album</title>
 
   <!-- CSS -->
@@ -19,7 +19,7 @@
   <!-- Header -->
   <header>
     <h1 class="site-title">Temple Album</h1>
-    <button id="menu" aria-label="Toggle Navigation Menu" aria-expanded="false">☰</button>
+    <button id="menu" aria-label="Toggle Navigation Menu" aria-expanded="false" aria-controls="nav">☰</button>
     <nav class="navigation" id="nav">
       <a href="#">Home</a>
       <a href="#">Old</a>
@@ -32,54 +32,54 @@
   <!-- Main -->
   <main>
     <h2>Temples of The Church</h2>
-    <div class="grid-container">
+    <section class="grid-container" aria-label="Temple Gallery">
 
       <figure>
-        <img src="images/Salt-Lake-City-Temple.jpeg" alt="Salt Lake Temple in Utah with snowy mountains" loading="lazy" width="400" height="250">
+        <img src="images/Salt-Lake-City-Temple.jpeg" alt="Salt Lake Temple in Utah with snowy mountains" loading="lazy" width="400" height="250" />
         <figcaption>Salt Lake Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="images/Rome-Italy-Temple.jpeg" alt="Rome Italy Temple with classical architecture and reflecting pool" loading="lazy" width="400" height="250">
+        <img src="images/Rome-Italy-Temple.jpeg" alt="Rome Italy Temple with classical architecture and reflecting pool" loading="lazy" width="400" height="250" />
         <figcaption>Rome Italy Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="images/Nairobi-Kenya-Temple.jpeg" alt="Nairobi Kenya Temple surrounded by tropical trees" loading="lazy" width="400" height="250">
+        <img src="images/Nairobi-Kenya-Temple.jpeg" alt="Nairobi Kenya Temple surrounded by tropical trees" loading="lazy" width="400" height="250" />
         <figcaption>Nairobi Kenya Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="images/Laie-Hawaii-Temple.jpeg" alt="Laie Hawaii Temple with palm trees and lush greenery" loading="lazy" width="400" height="250">
+        <img src="images/Laie-Hawaii-Temple.jpeg" alt="Laie Hawaii Temple with palm trees and lush greenery" loading="lazy" width="400" height="250" />
         <figcaption>Laie Hawaii Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="images/Cardston-Alberta-Temple.jpeg" alt="Cardston Alberta Temple built with white stone and gardens around" loading="lazy" width="400" height="250">
+        <img src="images/Cardston-Alberta-Temple.jpeg" alt="Cardston Alberta Temple built with white stone and gardens around" loading="lazy" width="400" height="250" />
         <figcaption>Cardston Alberta Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="images/Paris-France-Temple.jpeg" alt="Paris France Temple with manicured gardens and European architecture" loading="lazy" width="400" height="250">
+        <img src="images/Paris-France-Temple.jpeg" alt="Paris France Temple with manicured gardens and European architecture" loading="lazy" width="400" height="250" />
         <figcaption>Paris France Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="images/Accra-Ghana-Temple.jpeg" alt="Accra Ghana Temple with bright white exterior and blue sky" loading="lazy" width="400" height="250">
+        <img src="images/Accra-Ghana-Temple.jpeg" alt="Accra Ghana Temple with bright white exterior and blue sky" loading="lazy" width="400" height="250" />
         <figcaption>Accra Ghana Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="images/Bangkok-Thailand-Temple.jpeg" alt="Bangkok Thailand Temple with traditional design and gold accents" loading="lazy" width="400" height="250">
+        <img src="images/Bangkok-Thailand-Temple.jpeg" alt="Bangkok Thailand Temple with traditional design and gold accents" loading="lazy" width="400" height="250" />
         <figcaption>Bangkok Thailand Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="images/Freiburg-Germany-Temple.jpeg" alt="Freiberg Germany Temple with modern structure and flower beds" loading="lazy" width="400" height="250">
+        <img src="images/Freiburg-Germany-Temple.jpeg" alt="Freiberg Germany Temple with modern structure and flower beds" loading="lazy" width="400" height="250" />
         <figcaption>Freiberg Germany Temple</figcaption>
       </figure>
 
-    </div>
+    </section>
   </main>
 
   <!-- Footer -->
@@ -88,15 +88,13 @@
     <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
 
-  <!-- Fallback for date rendering -->
+  <!-- Fallback JS (in case defer fails) -->
   <script>
-    const yearSpan = document.getElementById("year");
-    const modifiedSpan = document.getElementById("lastModified");
-    const menuButton = document.getElementById("menu");
-    const nav = document.querySelector(".navigation");
+    document.getElementById("year").textContent = new Date().getFullYear();
+    document.getElementById("lastModified").textContent = document.lastModified;
 
-    yearSpan.textContent = new Date().getFullYear();
-    modifiedSpan.textContent = document.lastModified;
+    const menuButton = document.getElementById("menu");
+    const nav = document.getElementById("nav");
 
     menuButton.addEventListener("click", () => {
       const isOpen = nav.classList.toggle("open");
