--- a/temples.html
+++ b/temples.html
@@ -35,7 +35,7 @@
     <section class="grid-container" aria-label="Temple Gallery">
 
       <figure>
-        <img src="images/Salt-Lake-City-Temple.jpeg" alt="Salt Lake Temple in Utah with snowy mountains" loading="lazy" width="400" height="250" />
+        <img src="images/Salt-lake-City- Temple .jpeg" alt="Salt Lake Temple in Utah with snowy mountains" loading="lazy" width="400" height="250" />
         <figcaption>Salt Lake Temple</figcaption>
       </figure>
 
