--- a/temples.html
+++ b/temples.html
@@ -6,137 +6,22 @@
   <meta name="description" content="A responsive album of temples from around the world by Mary Okello. Explore photos, locations, and design." />
   <meta name="author" content="Mary Okello" />
   <title>Temple Album</title>
+
   <!-- Preload Roboto font -->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" onload="this.rel='stylesheet'">
-   <noscript>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-   </noscript>
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  </noscript>
 
   <!-- CSS -->
   <link rel="stylesheet" href="styles/base.css" />
   <link rel="stylesheet" href="styles/larger.css" />
 
-  <!-- JavaScript -->
-  <script src="scripts/temples.js" defer></script>
+  <!-- Favicon (optional) -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
-    <h1 class="site-title">Temple Album</h1>
-    <button id="menu" aria-label="Toggle Navigation Menu" aria-expanded="false" aria-controls="nav">☰</button>
-    <nav class="navigation" id="nav">
-      <a href="#">Home</a>
-      <a href="#">Old</a>
-      <a href="#">New</a>
-      <a href="#">Large</a>
-      <a href="#">Small</a>
-    </nav>
-  </header>
-
-  <!-- Main -->
-  <main>
-    <h2>Temples of The Church</h2>
-    <section class="grid-container" aria-label="Temple Gallery">
-
-    <figure>
-  <picture>
-    <source srcset="images/Salt-Lake-City-Temple.webp" type="image/webp">
-    <img src="images/Salt-Lake-City-Temple.jpeg" alt="Salt Lake Temple in Utah with snowy mountains" loading="lazy" width="400" height="250">
-  </picture>
-  <figcaption>Salt Lake Temple</figcaption>
-</figure>
-
-<figure>
-  <picture>
-    <source srcset="images/Rome-Italy-Temple.webp" type="image/webp">
-    <img src="images/Rome-Italy-Temple.jpeg" alt="Rome Italy Temple with classical architecture and reflecting pool" loading="lazy" width="400" height="250">
-  </picture>
-  <figcaption>Rome Italy Temple</figcaption>
-</figure>
-
-<figure>
-  <picture>
-    <source srcset="images/Nairobi-Kenya-Temple.webp" type="image/webp">
-    <img src="images/Nairobi-Kenya-Temple.jpeg" alt="Nairobi Kenya Temple surrounded by tropical trees" loading="lazy" width="400" height="250">
-  </picture>
-  <figcaption>Nairobi Kenya Temple</figcaption>
-</figure>
-
-<figure>
-  <picture>
-    <source srcset="images/Laie-Hawaii-Temple.webp" type="image/webp">
-    <img src="images/Laie-Hawaii-Temple.jpeg" alt="Laie Hawaii Temple with palm trees and lush greenery" loading="lazy" width="400" height="250">
-  </picture>
-  <figcaption>Laie Hawaii Temple</figcaption>
-</figure>
-
-<figure>
-  <picture>
-    <source srcset="images/Cardston-Alberta-Temple.webp" type="image/webp">
-    <img src="images/Cardston-Alberta-Temple.jpeg" alt="Cardston Alberta Temple built with white stone and gardens around" loading="lazy" width="400" height="250">
-  </picture>
-  <figcaption>Cardston Alberta Temple</figcaption>
-</figure>
-
-<figure>
-  <picture>
-    <source srcset="images/Paris-France-Temple.webp" type="image/webp">
-    <img src="images/Paris-France-Temple.jpeg" alt="Paris France Temple with manicured gardens and European architecture" loading="lazy" width="400" height="250">
-  </picture>
-  <figcaption>Paris France Temple</figcaption>
-</figure>
-
-<figure>
-  <picture>
-    <source srcset="images/Accra-Ghana-Temple.webp" type="image/webp">
-    <img src="images/Accra-Ghana-Temple.jpeg" alt="Accra Ghana Temple with bright white exterior and blue sky" loading="lazy" width="400" height="250">
-  </picture>
-  <figcaption>Accra Ghana Temple</figcaption>
-</figure>
-
-<figure>
-  <picture>
-    <source srcset="images/Bangkok-Thailand-Temple.webp" type="image/webp">
-    <img src="images/Bangkok-Thailand-Temple.jpeg" alt="Bangkok Thailand Temple with traditional design and gold accents" loading="lazy" width="400" height="250">
-  </picture>
-  <figcaption>Bangkok Thailand Temple</figcaption>
-</figure>
-
-<figure>
-  <picture>
-    <source srcset="images/Freiburg-Germany-Temple.webp" type="image/webp">
-    <img src="images/Freiburg-Germany-Temple.jpeg" alt="Freiberg Germany Temple with modern structure and flower beds" loading="lazy" width="400" height="250">
-  </picture>
-  <figcaption>Freiberg Germany Temple</figcaption>
-</figure>
-
-
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <p>© <span id="year"></span> 🌸 Mary Okello 🌸 Kenya</p>
-    <p>Last Modified: <span id="lastModified"></span></p>
-  </footer>
-
-  <!-- Fallback JS (in case defer fails) -->
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-    document.getElementById("lastModified").textContent = document.lastModified;
-
-    const menuButton = document.getElementById("menu");
-    const nav = document.getElementById("nav");
-
-    menuButton.addEventListener("click", () => {
-      const isOpen = nav.classList.toggle("open");
-      menuButton.setAttribute("aria-expanded", isOpen);
-      menuButton.textContent = isOpen ? "✖" : "☰";
-    });
-  </script>
-
-</body>
-</html>
+  <!-- Skip
