--- a/week03/place.html
+++ b/week03/place.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Explore Nairobi, Kenya—where modern life meets natural beauty. Check out current weather and local highlights.">
   <title>Nairobi, Kenya</title>
   <link rel="stylesheet" href="styles/place.css">
 </head>
