Moved place.html to root directory

--- a/week03/place.html
+++ b/week03/place.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Explore Nairobi, Kenya—where modern life meets natural beauty. Check out current weather and local highlights.">
   <title>Nairobi, Kenya</title>
-  <link rel="stylesheet" href="styles/place.css">
+  <link rel="stylesheet" href="styles/place.css" />
 </head>
 <body>
   <header>
@@ -29,10 +29,9 @@
         experience for visitors and locals alike.
       </p>
     </section>
-
     <section class="weather-info">
       <h2>Current Weather in Nairobi</h2>
-      <img src="images/weather-icon.jpeg" alt="Weather Icon" width="64" height="64" />
+      <img src="images/weather-icon.jpeg" alt="Weather Icon" width="64" height="64">
       <p><strong>Temperature:</strong> <span id="temperature">Loading...</span></p>
       <p><strong>Wind Speed:</strong> <span id="windSpeed">Loading...</span></p>
       <p><strong>Wind Chill:</strong> <span id="windChill">Loading...</span></p>
