--- a/place.html
+++ b/place.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Explore Nairobi, Kenya—where modern life meets natural beauty. Check out current weather and local highlights.">
   <title>Nairobi, Kenya</title>
-  <link rel="stylesheet" href="styles/place.css" />
+  <link rel="stylesheet" href="week03/styles/place.css" />
+  <link rel="icon" type="image/x-icon" href="week03/images/favicon.ico">
 </head>
 <body>
   <header>
@@ -14,12 +15,11 @@
 
   <div class="hero">
     <picture>
-      <source srcset="images/hero-large.webp" media="(min-width: 1000px)" />
-      <source srcset="images/hero-medium.webp" media="(min-width: 500px)" />
-      <img src="images/hero-small.webp" alt="Nairobi Kenya, Temple" width="500" height="250" />
-    </picture>
+  <source srcset="week03/images/hero-large.webp" media="(min-width: 1000px)" />
+  <source srcset="week03/images/hero-medium.webp" media="(min-width: 500px)" />
+  <img src="week03/images/hero-small.webp" alt="Nairobi Kenya, Temple" width="500" height="250" />
+</picture>
   </div>
-
   <main>
     <section class="nairobi-info">
       <h2>Nairobi cityscape</h2>
@@ -32,7 +32,7 @@
 
     <section class="weather-info">
       <h2>Current Weather in Nairobi</h2>
-      <img src="images/weather-icon.jpeg" alt="Weather Icon" width="64" height="64">
+      <img src="week03/images/weather-icon.jpeg" alt="Weather Icon" width="64" height="64">
       <p><strong>Temperature:</strong> <span id="temperature">Loading...</span></p>
       <p><strong>Wind Speed:</strong> <span id="windSpeed">Loading...</span></p>
       <p><strong>Wind Chill:</strong> <span id="windChill">Loading...</span></p>
@@ -40,9 +40,9 @@
   </main>
 
   <footer>
-    <p>&copy; <span id="year"></span> | Last Modified: <span id="lastModified"></span></p>
-  </footer>
+  <p>&copy; <span id="year"></span> | Nairobi, Kenya | Last Modified: <span id="lastModified"></span></p>
+</footer>
 
-  <script src="scripts/place.js" defer></script>
+ <script src="week03/scripts/place.js" defer></script>
 </body>
 </html>
