--- a/place.html
+++ b/place.html
@@ -3,11 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Explore Nairobi, Kenya—where modern life meets natural beauty. Check out current weather and local highlights.">
-  <title>Nairobi, Kenya</title>
+  <meta name="description" content="Discover Nairobi’s top attractions, weather updates, and cultural insights in one place." />
+  <meta name="author" content="Mary Okello" />
+  <title>Explore Nairobi - Weather, Culture, and Attractions</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+
   <link rel="stylesheet" href="week03/styles/place.css" />
-  <link rel="icon" type="image/x-icon" href="week03/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="week03/images/favicon.ico" />
 </head>
+
 <body>
   <header>
     <h1>Nairobi, Kenya</h1>
