--- a/place.html
+++ b/place.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Discover Nairobi’s top attractions, weather updates, and cultural insights in one place." />
   <meta name="author" content="Mary Okello" />
   <title>Explore Nairobi - Weather, Culture, and Attractions</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+ <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="week03/styles/place.css" />
   <link rel="icon" type="image/x-icon" href="week03/images/favicon.ico" />
@@ -16,7 +16,7 @@
 
 <body>
  <header>
-  <img src="week03/images/nairobi-logo.png" alt="Nairobi logo: giraffe, skyline, and sun" width="80" height="80" />
+  <img src="week03/images/nairobi-logo.webp" alt="Nairobi logo">
   <h1>Nairobi, Kenya</h1>
 </header>
 
