updated the html file

--- a/place.html
+++ b/place.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Discover Nairobi’s top attractions, weather updates, and cultural insights in one place." />
   <meta name="author" content="Mary Okello" />
   <title>Explore Nairobi - Weather, Culture, and Attractions</title>
-
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="week03/styles/place.css" />
   <link rel="icon" type="image/x-icon" href="week03/images/favicon.ico" />
 </head>
