updated the place.html

--- a/place.html
+++ b/place.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="week03/styles/place.css" />
   <link rel="icon" type="image/x-icon" href="week03/images/favicon.ico" />
 </head>
-
+<body class="font-body"></body>
 <body>
  <header>
   <img src="week03/images/nairobi-logo.webp" alt="Nairobi logo">
