--- a/place.html
+++ b/place.html
@@ -1,56 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Discover Nairobi’s top attractions, weather updates, and cultural insights in one place." />
-  <meta name="author" content="Mary Okello" />
-  <title>Explore Nairobi - Weather, Culture, and Attractions</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="week03/styles/place.css" />
-  <link rel="icon" type="image/x-icon" href="week03/images/favicon.ico" />
-</head>
-<body class="font-body"></body>
-<body>
- <header>
-  <img src="week03/images/nairobi-logo.webp" alt="Nairobi logo">
-  <h1>Nairobi, Kenya</h1>
-</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Your Place</title>
 
+    <!-- ✅ Google Font (Roboto) using full <link> embed -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 
-  <div class="hero">
-    <picture>
-  <source srcset="week03/images/hero-large.webp" media="(min-width: 1000px)" />
-  <source srcset="week03/images/hero-medium.webp" media="(min-width: 500px)" />
-  <img src="week03/images/hero-small.webp" alt="Nairobi Kenya, Temple" width="500" height="250" />
-</picture>
-  </div>
-  <main>
-    <section class="nairobi-info">
-      <h2>Nairobi cityscape</h2>
-      <p>
-        Nairobi, the capital city of Kenya, is known for its unique blend of modern urban life and natural beauty.
-        From bustling markets and skyscrapers to national parks and diverse wildlife, the city offers a vibrant
-        experience for visitors and locals alike.
-      </p>
-    </section>
+    <!-- ✅ CSS file in correct directory -->
+    <link rel="stylesheet" href="styles/place.css" />
 
-    <section class="weather-info">
-      <div class="weather-icon-large" aria-hidden="true"></div>
-      <h2>Current Weather in Nairobi</h2>
-      <svg class="weather-icon-mobile" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" aria-hidden="true">
-      <path fill="#0a74da" d="M6 14a4 4 0 1 1 7.9-1.1A5.5 5.5 0 1 1 17 20H6a3 3 0 0 1 0-6z"/>
-       </svg>
-      <p><strong>Temperature:</strong> <span id="temperature">Loading...</span></p>
-      <p><strong>Wind Speed:</strong> <span id="windSpeed">Loading...</span></p>
-      <p><strong>Wind Chill:</strong> <span id="windChill">Loading...</span></p>
-    </section>
-  </main>
+    <!-- ✅ Favicon -->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+  </head>
+  <body>
+    <header>
+      <img src="images/logo.png" alt="Site Logo" />
+      <h1>Welcome to Nairobi</h1>
+    </header>
 
-  <footer>
-  <p>&copy; <span id="year"></span> | Nairobi, Kenya | Last Modified: <span id="lastModified"></span></p>
-</footer>
+    <main>
+      <section class="hero">
+        <picture>
+          <source media="(min-width: 768px)" srcset="images/nairobi-large.jpg" />
+          <img src="images/nairobi-small.jpg" alt="Nairobi city" />
+        </picture>
+      </section>
 
- <script src="week03/scripts/place.js" defer></script>
-</body>
+      <section class="nairobi-info">
+        <h2>About Nairobi</h2>
+        <p>Nairobi is the capital city of Kenya and known for its natural beauty and wildlife.</p>
+      </section>
+
+      <section class="weather-info">
+        <h2>Weather</h2>
+        <p>
+          It's currently sunny in Nairobi.
+          <span class="weather-icon-mobile">☀️</span>
+          <span class="weather-icon-large"></span>
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2025 Nairobi Page by Mary Okello</p>
+    </footer>
+  </body>
 </html>
+
