--- a/place.html
+++ b/place.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Discover Nairobi’s top attractions, weather updates, and cultural insights in one place." />
+  <meta name="description" content="Explore Nairobi's culture, weather, and attractions in this WDD 131 activity by Mary Okello." />
   <meta name="author" content="Mary Okello" />
-  <title>Explore Nairobi - Weather, Culture, and Attractions</title>
+  <title>WDD 131 - Nairobi, Kenya</title>
 
-  <!-- ✅ Google Font via <link> -->
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 
-  <!-- ✅ Custom CSS in styles/ -->
+  <!-- External CSS -->
   <link rel="stylesheet" href="styles/place.css" />
 
-  <!-- ✅ Favicon -->
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 
@@ -23,29 +23,23 @@
     <h1>Nairobi, Kenya</h1>
   </header>
 
-  <div class="hero">
-    <picture>
-      <source srcset="images/hero-large.webp" media="(min-width: 1000px)" />
-      <source srcset="images/hero-medium.webp" media="(min-width: 500px)" />
-      <img src="images/hero-small.webp" alt="Nairobi Kenya, Temple" width="500" height="250" />
-    </picture>
-  </div>
-
   <main>
+    <section class="hero">
+      <picture>
+        <source srcset="images/hero-large.webp" media="(min-width: 1000px)" />
+        <source srcset="images/hero-medium.webp" media="(min-width: 500px)" />
+        <img src="images/hero-small.webp" alt="Nairobi, Kenya Temple" width="500" height="250" loading="lazy" />
+      </picture>
+    </section>
+
     <section class="nairobi-info">
-      <h2>Nairobi cityscape</h2>
-      <p>
-        Nairobi, the capital city of Kenya, is known for its unique blend of modern urban life and natural beauty.
-        From bustling markets and skyscrapers to national parks and diverse wildlife, the city offers a vibrant
-        experience for visitors and locals alike.
-      </p>
+      <h2>About Nairobi</h2>
+      <p>Nairobi is the capital city of Kenya, known for its wildlife, vibrant culture, and economic growth. It’s one of the only cities in the world with a national park within its limits.</p>
     </section>
 
     <section class="weather-info">
-      <div class="weather-icon-large" aria-hidden="true">
-        <!-- Optional large weather icon image here -->
-      </div>
-      <h2>Current Weather in Nairobi</h2>
+      <div class="weather-icon-large" aria-hidden="true"></div>
+      <h2>Current Weather</h2>
       <svg class="weather-icon-mobile" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" aria-hidden="true">
         <path fill="#0a74da" d="M6 14a4 4 0 1 1 7.9-1.1A5.5 5.5 0 1 1 17 20H6a3 3 0 0 1 0-6z"/>
       </svg>
@@ -56,10 +50,10 @@
   </main>
 
   <footer>
-    <p>&copy; <span id="year"></span> | Nairobi, Kenya | Last Modified: <span id="lastModified"></span></p>
+    <p>&copy; <span id="year"></span> Nairobi, Kenya | Last Modified: <span id="lastModified"></span></p>
   </footer>
 
-  <!-- ✅ JavaScript -->
+  <!-- External JS -->
   <script src="scripts/place.js" defer></script>
 </body>
 </html>
