--- a/place.html
+++ b/place.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Explore Nairobi's culture, weather, and attractions in this WDD 131 activity by Mary Okello." />
   <meta name="author" content="Mary Okello" />
   <title>WDD 131 - Nairobi, Kenya</title>
 
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
   <!-- External CSS -->
   <link rel="stylesheet" href="styles/place.css" />
