--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,19 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Filtered Temples</title>
+  
+  <!-- ✅ Title: more specific -->
+  <title>Temple Album - Filtered Temples</title>
+  
+  <!-- ✅ Meta Description -->
+  <meta name="description" content="An interactive album of temples filtered by age, size, and location.">
+
+  <!-- ✅ Meta Author -->
+  <meta name="author" content="Mary Okello">
+
+  <!-- ✅ Google Font Example -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+
+  <!-- ✅ CSS File -->
   <link rel="stylesheet" href="styles/filtered-temples.css" />
 </head>
 <body>
   <header>
     <h1>Temples</h1>
+    
+    <!-- ✅ Replaced <button> with <a> for valid HTML links -->
     <nav>
       <ul>
-        <li><button id="home">Home</button></li>
-        <li><button id="old">Old</button></li>
-        <li><button id="new">New</button></li>
-        <li><button id="large">Large</button></li>
-        <li><button id="small">Small</button></li>
+        <li><a href="#" id="home">Home</a></li>
+        <li><a href="#" id="old">Old</a></li>
+        <li><a href="#" id="new">New</a></li>
+        <li><a href="#" id="large">Large</a></li>
+        <li><a href="#" id="small">Small</a></li>
       </ul>
     </nav>
   </header>
@@ -28,7 +43,7 @@
     <p>&copy; <span id="year"></span> | Last Modified: <span id="lastModified"></span></p>
   </footer>
 
- <script src="scripts/filtered-temples.js"></script>
-
+  <!-- ✅ Added defer for non-blocking JS -->
+  <script src="scripts/filtered-temples.js" defer></script>
 </body>
 </html>
