Updated head section and metadata for HTML validation

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <!-- ✅ Title: more specific -->
-  <title>Temple Album - Filtered Temples</title>
-  
-  <!-- ✅ Meta Description -->
-  <meta name="description" content="An interactive album of temples filtered by age, size, and location.">
-
-  <!-- ✅ Meta Author -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Discover a dynamic temple gallery sorted by age, size, and location using JavaScript filters.">
   <meta name="author" content="Mary Okello">
-
-  <!-- ✅ Google Font Example -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-
-  <!-- ✅ CSS File -->
-  <link rel="stylesheet" href="styles/filtered-temples.css" />
+  <title>Filtered Temple Album | WDD 131</title>
+  <link rel="stylesheet" href="styles/filtered-temples.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <script src="scripts/filtered-temples.js" defer></script>
 </head>
+
 <body>
   <header>
     <h1>Temples</h1>
