Update filtered temples HTML and JS, add data script

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -37,5 +37,6 @@
 
   <!-- ✅ Added defer for non-blocking JS -->
   <script src="scripts/filtered-temples.js" defer></script>
+  <script src="scripts/filtered-temples-data.js"></script>
 </body>
 </html>
