--- a/form.html
+++ b/form.html
@@ -1,69 +1,58 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Submit a product review using this form.">
-  <meta name="author" content="Mary Okello">
-  <title>Product Review Form</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Product Review</title>
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
-  
 
-  <form method="get" action="review.html">
-    <h1>Product Review Form</h1>
-    <label for="product">Product:</label>
+  <form id="review-form">
+    <h2>Product Review Form</h2>
+
+    <label for="name">Your Name</label>
+    <input type="text" id="name" name="name" required />
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required />
+
+    <label for="product">Select Product</label>
     <select id="product" name="product" required>
-      <option value="">Select a product</option>
-      <option value="widgetA">Widget A</option>
-      <option value="widgetB">Widget B</option>
-      <option value="widgetC">Widget C</option>
+      <option value="" disabled selected>Select a product</option>
     </select>
 
     <fieldset>
-      <legend>Rating:</legend>
-      <label><input type="radio" name="rating" value="1" required> 1</label>
-      <label><input type="radio" name="rating" value="2"> 2</label>
-      <label><input type="radio" name="rating" value="3"> 3</label>
-      <label><input type="radio" name="rating" value="4"> 4</label>
-      <label><input type="radio" name="rating" value="5"> 5</label>
+      <legend>Rating</legend>
+      <label><input type="radio" name="rating" value="1" required /> 1 Star</label>
+      <label><input type="radio" name="rating" value="2" /> 2 Stars</label>
+      <label><input type="radio" name="rating" value="3" /> 3 Stars</label>
+      <label><input type="radio" name="rating" value="4" /> 4 Stars</label>
+      <label><input type="radio" name="rating" value="5" /> 5 Stars</label>
     </fieldset>
 
-    <label for="review-date">Review Date:</label>
-    <input type="date" id="review-date" name="review-date" required>
+    <label for="review">Your Review</label>
+    <textarea id="review" name="review" rows="5" required></textarea>
 
-    <fieldset>
-      <legend>Features Used:</legend>
-      <label><input type="checkbox" name="features" value="durability"> Durability</label>
-      <label><input type="checkbox" name="features" value="design"> Design</label>
-      <label><input type="checkbox" name="features" value="performance"> Performance</label>
-      <label><input type="checkbox" name="features" value="value"> Value for Money</label>
-    </fieldset>
+    <label>
+      <input type="checkbox" name="subscribe" />
+      Subscribe to updates on this product
+    </label>
 
-    <label for="comments">Additional Comments:</label>
-    <textarea id="comments" name="comments" rows="4" cols="40"></textarea>
-
-    <label for="username">Your Name:</label>
-    <input type="text" id="username" name="username" required>
-
-   <input type="submit" value="Submit">
+    <button type="submit">Submit Review</button>
   </form>
 
-  <script src="scripts/script.js" defer></script>
-      <footer>
-    <p>&copy; <span id="year"></span> Mary Okello. All rights reserved.</p>
-    <p>Last modified: <span id="lastModified"></span></p>
+  <footer>
+    <p>&copy; 2025 Product Review Inc. All rights reserved.</p>
+    <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
 
+  <script src="scripts/script.js"></script>
   <script>
-    // Set current year
-    document.getElementById("year").textContent = new Date().getFullYear();
-
-    // Set last modified date
+    // Display last modified date
     document.getElementById("lastModified").textContent = document.lastModified;
   </script>
 
 </body>
 </html>
+
