--- a/form.html
+++ b/form.html
@@ -1,58 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="description" content="Product Review Form - Share your thoughts on our products." />
+  <meta name="author" content="Mary Okello" />
   <title>Product Review</title>
   <link rel="stylesheet" href="styles/styles.css" />
+  <script src="scripts/script.js" defer></script>
 </head>
 <body>
-
-  <form id="review-form">
-    <h2>Product Review Form</h2>
-
-    <label for="name">Your Name</label>
-    <input type="text" id="name" name="name" required />
-
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required />
-
-    <label for="product">Select Product</label>
-    <select id="product" name="product" required>
-      <option value="" disabled selected>Select a product</option>
-    </select>
+  <h1>Product Review</h1>
+  <form method="get" action="review.html">
+    <label for="product">Select a product:</label>
+    <select name="product" id="product" required></select>
 
     <fieldset>
-      <legend>Rating</legend>
-      <label><input type="radio" name="rating" value="1" required /> 1 Star</label>
-      <label><input type="radio" name="rating" value="2" /> 2 Stars</label>
-      <label><input type="radio" name="rating" value="3" /> 3 Stars</label>
-      <label><input type="radio" name="rating" value="4" /> 4 Stars</label>
-      <label><input type="radio" name="rating" value="5" /> 5 Stars</label>
+      <legend>Rate the product:</legend>
+      <label><input type="radio" name="rating" value="1" required> 1</label>
+      <label><input type="radio" name="rating" value="2"> 2</label>
+      <label><input type="radio" name="rating" value="3"> 3</label>
+      <label><input type="radio" name="rating" value="4"> 4</label>
+      <label><input type="radio" name="rating" value="5"> 5</label>
     </fieldset>
 
-    <label for="review">Your Review</label>
-    <textarea id="review" name="review" rows="5" required></textarea>
+    <label for="review-date">Date of Purchase:</label>
+    <input type="date" id="review-date" name="review-date" required>
 
-    <label>
-      <input type="checkbox" name="subscribe" />
-      Subscribe to updates on this product
-    </label>
+    <fieldset>
+      <legend>Features Used (select all that apply):</legend>
+      <label><input type="checkbox" name="features" value="easy-use"> Easy to Use</label>
+      <label><input type="checkbox" name="features" value="durable"> Durable</label>
+      <label><input type="checkbox" name="features" value="energy-saving"> Energy Saving</label>
+      <label><input type="checkbox" name="features" value="compact"> Compact Design</label>
+    </fieldset>
 
-    <button type="submit">Submit Review</button>
+    <label for="reviewer-name">Your Name:</label>
+    <input type="text" id="reviewer-name" name="reviewer-name" required>
+
+    <label for="comments">Additional Comments:</label>
+    <textarea id="comments" name="comments" rows="4" cols="50"></textarea>
+
+    <input type="submit" value="Submit">
   </form>
 
   <footer>
-    <p>&copy; 2025 Product Review Inc. All rights reserved.</p>
-    <p>Last Modified: <span id="lastModified"></span></p>
+    <p>&copy; 2025 Mary Okello</p>
+    <p id="lastModified"></p>
   </footer>
 
-  <script src="scripts/script.js"></script>
   <script>
-    // Display last modified date
-    document.getElementById("lastModified").textContent = document.lastModified;
+    // Set last modified date in footer
+    document.getElementById("lastModified").textContent = "Last Modified: " + document.lastModified;
   </script>
-
 </body>
 </html>
-
