updated form.html file

--- a/form.html
+++ b/form.html
@@ -6,6 +6,8 @@
   <meta name="description" content="Product Review Form - Share your thoughts on our products." />
   <meta name="author" content="Mary Okello" />
   <title>Product Review</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+
   <link rel="stylesheet" href="styles/styles.css" />
   <script src="scripts/script.js" defer></script>
 </head>
@@ -41,7 +43,8 @@
     <label for="comments">Additional Comments:</label>
     <textarea id="comments" name="comments" rows="4" cols="50"></textarea>
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit Review" />
+
   </form>
 
   <footer>
