--- a/form.html
+++ b/form.html
@@ -14,8 +14,11 @@
 <body>
   <h1>Product Review</h1>
   <form method="get" action="review.html">
-    <label for="product">Select a product:</label>
-    <select name="product" id="product" required></select>
+    <label for="product">Product:</label>
+    <select id="product" name="product" required>
+    <option value="" disabled selected>Select a product</option>
+    </select>
+
 
     <fieldset>
       <legend>Rate the product:</legend>
